--- a/tex/experiment.tex
+++ b/tex/experiment.tex
@@ -10,17 +10,15 @@ including the discovery of the Higgs boson, achieved in
 2012~\cite{2012gk,Chatrchyan201230}.
 
 In this chapter we will briefly describe the main features of 
-the accelerator (Section~\ref{sec:LHC}) and in greater detail 
-the ATLAS detector (Section~\ref{sec:ATLAS}), both located at the CERN
+the accelerator (Sec.~\ref{sec:LHC}) and in greater detail 
+the ATLAS detector (Sec.~\ref{sec:ATLAS}), both located at the CERN
 laboratory in Geneva, Switzerland.
 
 \section{The Large Hadron Collider}
 \label{sec:LHC}
 
-The LHC program ~\cite{LHCreport} was approved by CERN Council in
-1994, followed by the approval of the four main experiments:
-ATLAS~\ref{sec:ATLAS} and CMS~\cite{cms} in 1996; ALICE~\cite{alice}
-in 1997; LHCb~\cite{lhcb} in 1998. Works towards the installation of
+The LHC program~\cite{LHCreport} was approved by the CERN Council in
+1994. Work towards the installation of
 the most powerful particle accelerator of the world started when the
 Large Electron Positron Collider (LEP) was dismantled in 2000 to give
 up its place in the tunnel to the LHC, which was then fully
@@ -51,14 +49,22 @@ Finally the protons are injected into the LHC.
 \end{center}
 \end{figure}
 
+The beams are brought to collision in four interaction points along
+the ring, where the four main experiments are situated: 
+ATLAS, described in Sec.~\ref{sec:ATLAS} and CMS~\cite{cms} are
+multipurpose experiments designed to study a broad range of physics
+processes; the LHCb~\cite{lhcb} experiment is specialized in the
+detection of $b$--hadrons, while the ALICE~\cite{alice} collaboration
+focuses on the study of heavy--ion collisions.
+
 An important parameter of the LHC is the {\it
   instantaneous luminosity}  $\mathcal L$, defined as
 \begin{equation}\label{eq:lumiN}
 \mathcal{L}=f\times n\dfrac{N_1\times N_2}{A},
 \end{equation} 
-$f$ is the frequency of collisions, $n$ the number of bunches, $N_1,
-N_2$ the number of particles in the two bunches, and $A$ beam
-cross-section.
+where $f$ is the frequency of collisions, $n$ is the number of
+bunches, $N_1$ and $N_2$ are the number of particles in the two
+bunches, and $A$ is the beam cross section.
 The \textit{integrated luminosity} over a period of time relates the
 total number of produced events $N_{tot}$ to the cross section:
 \begin{equation}\label{eq:intLumi}
@@ -68,21 +74,22 @@ Therefore, the integrated luminosity is used to describe the amount of
 collision data delivered by the LHC.
 
 First proton beams were circulated on September 10, 2008, with the
-plan to have the first collisions at a center-of-mass energy
+plan to have the first collisions at a center-of-mass energy of
 $\sqrt{s}=900~\GeV{}$. However, nine days later, a faulty electrical
-connection between two superconducting magnets, caused the rupture of
+connection between two superconducting magnets caused the rupture of
 the cooling layer and the release of liquid Helium in the insulating
 vacuum. The subsequent explosion severely damaged the machine.
 After one year of repairs and consolidation, LHC resumed its
 operations and finally delivered the first $pp$ collisions on November
 30, 2009.
 In 2010 each beam was accelerated to an energy of \mbox{$3.5 \TeV$}, 
-resulting into a center-of-mass energy \mbox{$\sqrt{s} = 7 \TeV$}, and
-an integrated luminosity of $45\ifb$ was delivered.
-In 2011 the LHC delivered about $5.32\ifb{}$ of $pp$ collision data at \seventev{}.
+resulting in $pp$ collisions at a center-of-mass energy
+\mbox{$\sqrt{s} = 7 \TeV$}, and an integrated luminosity of about
+$45\ipb$ was delivered to the ATLAS and CMS experiments.
+In 2011 the LHC delivered about $5\ifb{}$ of $pp$ collision data at \seventev{}.
 In 2012, the beam energy was increased to \mbox{$4 \TeV$}, 
 corresponding to \mbox{$\sqrt{s} = 8 \TeV$}. An integrated luminosity
-of $23.26\ifb{}$ was delivered.
+of about $23\ifb{}$ was delivered.
 The LHC was designed to collide protons up to \mbox{$\sqrt{s} = 14
   \TeV$}. In 2015 the LHC operation will resume with proton collisions
 at \mbox{$\sqrt{s} = 13 \TeV$}. 
@@ -101,39 +108,31 @@ steadily during the data--taking.
 \begin{figure}[ht]\centering
 \includegraphics[width=0.8\textwidth]{figures/experiment/lumivstime}
 \caption{
-The peak instantaneous luminosity delivered to ATLAS per day versus
+The peak instantaneous luminosity delivered to the ATLAS experiment per day versus
 time during the $pp$ runs of 2010, 2011 and 2012.}
 \label{fig:lumivstime}
 \end{figure}
 
 Due to the high frequency of collisions and charge density of the
 bunches necessary to achieve such high luminosity, there is a non-zero
-probability that several events,originating from different $pp$ collisions, 
+probability that several events, originating from different $pp$ collisions, 
 may occur simultaneously.
-These pile-up events are categorized as {\it in-time} or {\it
-  out-of-time} pile-up. 
-In-time pile-up events are caused by  multiple inelastic interactions
+These {\it pile--up} events are categorized as {\it in--time} or {\it
+  out--of--time}. 
+In--time pile--up events are caused by  multiple inelastic interactions
 of protons in the same bunch collision.
-The out-of-time pile-up occurs when the detector records events
+The out--of--time pile--up occurs when the detector records events
 originated in different bunch-crossings.
-The mean number of interactions per bunch collision is shown in
+The mean number of interactions per bunch crossing is shown in
 Fig.~\ref{fig:mu}, with an average of about 9 in 2011 and 20 in 2012.
 
 \begin{figure}[ht]\centering
 \includegraphics[width=0.6\textwidth]{figures/experiment/mu_2011_2012}
 \caption{
 Luminosity-weighted distribution of the mean number of interactions
-per crossing for the 2011 and 2012 data.}
+per crossing for the dataset recorded by the ATLAS experiment in 2011 and 2012.}
 \label{fig:mu}
 \end{figure}
-
-The beams are brought to collision in four interaction points along
-the ring, where the four main experiments are situated: 
-ATLAS, described in Sec.~\ref{sec:ATLAS} and CMS~\cite{cms} are
-multipurpose experiments designed to study a broad range of physics
-processes; the LHCb~\cite{lhcb} experiment is specialized in the
-detection of $b$--hadrons, while the ALICE~\cite{alice} collaboration
-focuses on the study of heavy--ion collisions.
 
 \section{The ATLAS experiment}
 \label{sec:ATLAS}
@@ -142,7 +141,7 @@ focuses on the study of heavy--ion collisions.
 \begin{center}
 \includegraphics[width=0.9\textwidth]{figures/experiment/atlas_overview}
 \caption[Drawing of the ATLAS detector]{
-  Drawing of the ATLAS detector showing the different detectors and
+  Drawing of the ATLAS detector showing the different sub--detectors and
   the magnet systems.}
 \label{fig:ATLAS}
 \end{center}
@@ -154,8 +153,8 @@ new phenomena, if kinematically accessible, and to measure the
 properties of known particles produced at unprecedented energies and
 high rates.
 As shown in Fig.~\ref{fig:ATLAS}, the detector is built in several
-layers of sub-detectors, each devoted to the measurement of different
-properties for different types of particles. The sub-detectors are
+layers of sub--detectors, each devoted to the measurement of different
+properties for different types of particles. The sub--detectors are
 grouped into three main systems: 
 
 \begin{itemize}
@@ -169,7 +168,7 @@ grouped into three main systems:
   neutral and charged particles. They are designed to stop most types
   of particles, except for muons and
   neutrinos. Section~\ref{sec:calorimeter} illustrates the design and
-  operation of the calorimetry system. 
+  operation of the calorimeter system. 
 \item The Muon system is described in
   Sec.~\ref{sec:muonspectrometer}. Because muons minimally interact
   with the other parts of the detector and have long lifetimes, they
@@ -177,12 +176,6 @@ grouped into three main systems:
   consists of muon spectrometers immersed in a toroidal magnetic
   field. 
 \end{itemize}
-
-In \ttbar{} events with $\ell{}$+jets final state, electrons and jets
-are identified by the tracking and calorimetry systems, muons are
-identified by the tracking and muon systems, and the transverse
-components of the neutrino momenta are inferred from the imbalance in
-the total transverse momenta measured in the detector.
 
 \subsection{Coordinate system}
 \label{sec:coords}
@@ -193,12 +186,12 @@ points toward the center of the LHC ring, the $y$ axis points upward,
 and the $z$ axis is along the beam direction. The azimuthal angle
 $\phi$ is the angle with respect to the positive $x$ axis in the
 $x$--$y$ plane, transverse to the beam direction. The polar angle
-$\theta$ is defined as the angle with the positive $z$ axis. Its
-function pseudo-rapidity \mbox{$\eta
-  =-\ln\left(\tan\dfrac{\theta}{2}\right)$} is more often used. For
+$\theta$ is defined as the angle with the positive $z$ axis. The
+related quantity pseudo--rapidity, defined as \mbox{$\eta
+  =-\ln\left(\tan\theta/2\right)$} is more often used. For
 massless objects, this quantity is equivalent to the rapidity as
-\mbox{$y =\dfrac{1}{2}\ln\left(\dfrac{E+p_z}{E-p_z}\right)$}. The
-distance in the $\eta$--$\phi$ space is referred to as \mbox{$\Delta R
+\mbox{$y =1/2\ln\left((E+p_z)(E-p_z)\right)$}. The
+distance in the $\eta$--$\phi$ space is defined as \mbox{$\Delta R
   = \sqrt{(\Delta \eta)^2+(\Delta \phi)^2}$}.
 
 Since the detector is hermetic in the transverse plane, it is useful
@@ -218,14 +211,14 @@ boost-invariant along the Z axis:
 \caption[Overview of the Inner Detector]{
   Overview of the Inner Detector: 
   the left figure shows a longitudinal section of the Inner Detector
-  with the different sub-detectors.
+  with the different sub--detectors.
   The right figure displays a cosmic ray event as recorded by the
   pixel detector.}
 \label{fig:ID}
 \end{figure}
 
-The ATLAS Inner Detector (ID) consists of three sub-detector systems:
-the Pixel detector and the SemiConductor Tracker~(SCT), which use
+The ATLAS Inner Detector (ID) consists of three sub--detector systems:
+the Pixel detector and the SemiConductor Tracker~(SCT), both of which use
 silicon semiconductor technology, and the Transition Radiation
 Tracker~(TRT), which exploits the transition radiation produced in a
 gas mixture of Xe, CO$_2$ and O$_2$.
@@ -234,7 +227,7 @@ the ID. The whole ID is immersed in a \mbox{$2 \T$} solenoidal field
 (see Sec.~\ref{sec:magnets}).
 
 With three concentric cylinders~(barrel part), and three end-cap disks
-perpendicular to the beam axis, the Pixel detector covers a range of
+perpendicular to the beam axis, the Pixel detector covers a pseudo--rapidity range of
 \mbox{$|\eta| < 2.5$}.
 Each of the 1744 sensors consists of a segmented silicon wafer with
 pixels of minimum area \mbox{$50 \times 400 \mum^2$} and 46080 readout
@@ -258,7 +251,7 @@ and secondary vertices.
 The TRT enhances the momentum resolution by providing additional track
 measurement points.
 The barrel is made of 73 planes of straw tubes filled with a gas
-mixture of 70\% Xenon, 27\% Carbon Dyoxide and 3\% Oxygen. The tubes
+mixture of $70\% Xe$, $27\% CO_2$ and $3\% O$. The tubes
 are arranged parallel to the beam axis.
 In the end-cap, there are 160 straw planes, oriented radially,
 covering a range of \mbox{$|\eta| < 2.0$}. 
@@ -268,24 +261,24 @@ than for pions.
 
 In order to limit the degradation of the energy measurement in the
 calorimeters, the ID is designed to minimize the amount of material in
-front of the calorimeters to avoid degrading the energy measurement.
+front of the calorimeters.
 The total amount of material of the ID corresponds to roughly 0.5
 electromagnetic radiation lengths\footnote{The radiation length is
   defined as the typical amount of material traversed by an electron
-  after which it has lost $\frac{1}{e}$ of its original energy by
+  after which it has lost $1/e$ of its original energy by
   bremsstrahlung.} $X_0$ in the range \mbox{$|\eta| < 0.6$}.
 In the regions \mbox{$0.6 < |\eta| < 1.37$} and \mbox{$1.52 < |\eta| <
   2.5$}, the amount of material reaches up to \mbox{$1.5 X_0$}.
 In the barrel-to-end-cap transition regions at \mbox{$1.37 < |\eta| <
   1.52$}, the amount of material is even larger, with a significant
-degradation of the energy measurement.
+degradation of the energy measurement in the calorimeters.
 
 \subsection{Calorimeters}
 \label{sec:calorimeter}
 
 After crossing the ID and the solenoid magnet, particles enter the
-calorimeters system.
-The full system is characterized by a coverage in pseudorapidity up to
+calorimeter system.
+The full system is characterized by a coverage in pseudo--rapidity up to
 $|\eta|<5$ and an almost full coverage in $\phi$. With  a thickness of
 22~$X_0$ and 24~$X_0$ in the barrel and end-cap regions, respectively, 
 it is designed to stop most of the particles produced at collisions,
@@ -318,7 +311,7 @@ and one for each end-cap.
 \includegraphics[width=0.9\textwidth]{figures/experiment/calorimeters}
 \caption[Overview of the calorimeter system]{
   Overview of the calorimeter system:
-  the different sub-detectors of the electromagnetic and hadronic calorimeter are shown.}
+  the different sections of the electromagnetic and hadronic calorimeters are shown.}
 \label{fig:calorimeters}
 \end{center}
 \end{figure}
@@ -328,10 +321,10 @@ hadronic showers\footnote{A shower is a cascade of secondary particles produced
 as the result of a high-energy particle interacting with the dense matter of the calorimeter.} 
 to ensure a precise measurement of their energies.
 
-All calorimeters are finely granulated and also segmented
-longitudinally to allow for a precise determination of the position of the showers and to
-distinguish different shower types by the use of shower shapes.
-This is particularly important for the central region, 
+All calorimeters are finely segmented, both transversally and
+longitudinally, to allow for a precise determination of the position
+of the showers and to distinguish different shower types by the use of
+shower shapes. This is particularly important for the central region, 
 which is devoted to precision measurements of electrons and photons:
 the EMB (\mbox{$|\eta| < 1.475$}) is segmented into three longitudinal
 layers, where the first layer granularity is
@@ -385,7 +378,7 @@ to avoid gaps in the detector coverage.
 
 \begin{figure}[ht]
 \begin{center}
-\includegraphics[width=0.9\textwidth]{figures/experiment/muonchambers}
+\includegraphics[width=0.7\textwidth]{figures/experiment/muonchambers}
 \caption[Overview of the muon system]{
   Overview of the muon system:
   the different types of tracking and trigger chambers are shown.}
@@ -394,7 +387,7 @@ to avoid gaps in the detector coverage.
 \end{figure}
 
 The technologies for the tracking systems have been chosen according to
-level of particle flux.
+the expected particle flux.
 The MDTs in the barrel part follow a robust and reliable detector design.
 Since each tube contains only one sense wire, the simple geometry
 allows for the prediction of deformations as well as for a precise
@@ -430,7 +423,7 @@ minimize the amount of material in front of the calorimeter system.
 
 \begin{figure}[ht]
 \begin{center}
-\includegraphics[width=0.9\textwidth]{figures/experiment/magnets}
+\includegraphics[width=0.7\textwidth]{figures/experiment/magnets}
 \caption[Overview of the magnet system]{
   Overview of the magnet system:
   the solenoid and the toroids are shown.}
@@ -447,13 +440,13 @@ Hence, 1800 Hall sensors were installed in the muon spectrometer
 volume to enable the monitoring of the magnetic field.
 
 
-\section{Forward sub-detectors}
+\subsection{Forward sub--detectors}
 \label{sec:forward}
 
 ATLAS is equipped with sub--detectors in the forward regions used for
 monitoring tasks.
 The Minimum Bias Trigger Scintillators (MBTS), embedded in the
-structure of TileCal extended barrel modules, are 32 scintillator
+structure of TileCal extended barrel modules, consist of 32 scintillator
 paddles assembled in two disks covering the pseudo--rapidity region
 $2.09<|\eta|<3.84$ and are used to detect minimum bias activity and to
 indirectly measure the luminosity.
@@ -468,7 +461,6 @@ ALFA (Absolute Luminosity For ATLAS) is used to calibrate the
 luminosity measurement with dedicated runs, and consists of 8
 scintillating fibers placed at 240~m from the interaction point inside
 roman pots, above and below the beam pipe.
-
 Auxiliary monitoring of the luminosity is provided by the Zero-Degree
 Calorimeter, whose main purpose is to determine the centrality of heavy-ion
 collisions.
@@ -479,14 +471,14 @@ The Beam Condition Monitor (BCM) consists of two sets of
 diamond sensors located 184~cm from the interaction point along the
 beam and at a radial distance of $R=$5.5~cm. 
 It is devoted to the detection of beam losses and provides fast
-signals to abort the beam safely, if the loss rate becomes dangerous
+signals to abort the beam safely, in case the loss rate becomes dangerous
 for the integrity of the ATLAS detector.
 
 \subsection{Trigger system}
 \label{sec:triggerDAQ}
 
 With a nominal bunch spacing of \mbox{$50 \ns$} and
-\mbox{$\approx{}1~MB$} event size, ATLAS generates more
+$\approx{}1$ MB event size, ATLAS generates more
 information than can be recorded to disk. In 20 million 
 interactions per second, approximately one \ttbar{} event 
 is produced. It is therefore crucial to have an efficient trigger
@@ -515,20 +507,20 @@ for the next trigger level. The L1 trigger defines one or more
 \emph{regions-of-interest} (RoIs) in $\eta{}$ and $\phi{}$ where the
 L1 trigger has identified interesting features. 
 
-The Level 2 (L2) trigger is software based. At this level the full detector
+The Level 2 (L2) trigger is based on software. At this level the full detector
 granularity is used for the trigger decision but only within the RoIs
 identified at L1. Thus the throughput is reduced to
 $\approx{}2~\mathrm{kHz}$ within the allowed latency of $\approx{}40\ms{}$.
 
 The final trigger level is the Event Filter (EF). At this stage the RoIs
-information is treated using the same algorithms as the off-line
+information is processed using the same algorithms as the off-line
 reconstruction. The EF reduces the output rate to $\approx{}200~\mathrm{Hz}$, 
 with a latency of $\approx{}4\sec{}$. Once accepted by an EF trigger, an
 event is written to mass storage.
 The combination of the two software steps L2 and EF is referred to 
 as High Level Trigger (HLT).
 
-During 2011 the RoI seeded approach at EF was replaced by a
+During the course of 2011 the RoI--seeded approach at the EF was replaced by a
 {\it full-scan} strategy. It was found that sufficient time was available
 to read the information from the entire ATLAS calorimetry system, 
 which allows to improve the on-line selection efficiency.
@@ -554,17 +546,17 @@ The naming convention is as follow:
 \begin{equation*}\label{eq:}
 {\rm [LEVEL][N][TYPE(S)][THRESHOLD][ISOLATION][QUALITY]},
 \end{equation*}
-where the components, from left to right, are: the trigger level used; the
-multiplicity of the type; the object candidate; the threshold applied to
-the transverse momentum or energy of the object candidate; the object isolation;
-additional requirements related to the type of algorithm used.
+where the components, from left to right, are: the trigger level used, the
+multiplicity of the type, the object candidate, the threshold applied to
+the transverse momentum or energy of the object candidate, the object
+isolation, and additional requirements related to the type of algorithm used.
 
 In order to keep the rate within the available bandwidth
 ($\approx{}200~\mathrm{Hz}$),  prescales are applied to the triggers
 with loose requirements so that only a fraction of the events passing
 the selection are actually recorded.
 Prescales are dynamically adjusted as the instantaneous luminosity
-decreases at each collision. Data taking time units are defined as
+decreases at each collision. Data--taking time units are defined as
 {\it Luminosity Blocks} (LB), corresponding to few minutes of  data
 taking, with associated information on beam conditions, detector performance 
 and trigger configuration. All the LB between the start and the
@@ -573,16 +565,16 @@ in {\it Data Periods}, labelled with capital letters (Period A, Period B, {\it e
 which correspond to the same general detector conditions, machine configuration and
 trigger menu.
 
-\section{Data quality requirements}
+\subsection{Data quality requirements}
 \label{sec:daq}
 
 Not all collision events recorded by ATLAS are used for data analysis.
-Each sub-detectors maintains a record of its performance across the
+Each sub--detectors maintains a record of its performance across the
 run. Only the data collected with sub--detectors meeting quality
 requirements are considered for the analysis. Therefore, for each dataset
 {\it Good Runs Lists} (GRL) are compiled recording for each LB which
 sub--detectors satisfied the requirements.
-For the measurements presented in this dissertation, all ATLAS subsystems
+For the measurements presented in this dissertation, all ATLAS sub--systems
 are needed as the physics objects used in the analyses are reconstructed
 using the information from the full detector. The typical data quality
 efficiency is well above 90\%.
