--- a/bib/simulation.bib
+++ b/bib/simulation.bib
@@ -226,3 +226,21 @@
                        Developments and Lessons Learned}",
       year          = "2005",
 }
+
+@article{Aad:2010fh,
+      author         = "Aad, Georges and others",
+      title          = "{Measurement of underlying event characteristics using
+                        charged particles in pp collisions at $\sqrt{s} = 900 GeV$
+                        and 7 TeV with the ATLAS detector}",
+      collaboration  = "ATLAS Collaboration",
+      journal        = "Phys.Rev.",
+      volume         = "D83",
+      pages          = "112001",
+      doi            = "10.1103/PhysRevD.83.112001",
+      year           = "2011",
+      eprint         = "1012.0791",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2010-063",
+      SLACcitation   = "%%CITATION = ARXIV:1012.0791;%%",
+}
