--- a/bib/objects.bib
+++ b/bib/objects.bib
@@ -143,3 +143,18 @@ url = "http://www.sciencedirect.com/science/article/pii/0168900287908874",
       month         = "Jul",
       year          = "2014",
 }
+
+@article{Cacciari:2007fd,
+      author         = "Cacciari, Matteo and Salam, Gavin P.",
+      title          = "{Pileup subtraction using jet areas}",
+      journal        = "Phys.Lett.",
+      volume         = "B659",
+      pages          = "119-126",
+      doi            = "10.1016/j.physletb.2007.09.077",
+      year           = "2008",
+      eprint         = "0707.1378",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "LPTHE-07-01",
+      SLACcitation   = "%%CITATION = ARXIV:0707.1378;%%",
+}
